--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "knex": "^0.14.6",
-    "pg": "^7.4.1"
+    "pg": "^7.4.1",
+    "psql": "0.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
