--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "knex": "^0.14.6",
+    "morgan": "^1.9.0",
     "pg": "^7.4.1",
     "psql": "0.0.1"
   },
